# paper-chat

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/paper_chat/: __init__.py  chat.py  config.py  ingest.py  store.py
tests/: test_core.py
